Cleaned up Venkman manifest includes. Removed all links to songbirdnest and adjusted the comments accordingly.  Didn't change any namespaces to avoid conflicts. Updated build script to include version in xpi. Added .gitignore to exclude *.xpi, since the packaged xpi will change filenames on every new version.

--- a/developertools/chrome/content/extension-loaded.html
+++ b/developertools/chrome/content/extension-loaded.html
@@ -21,12 +21,12 @@
           is now being displayed.
         </p>
         <p>
-          To begin customizing Songbird, try editing the files in the chrome/content folder.  To see your changes,
+          To begin customizing Nightingale, try editing the files in the chrome/content folder.  To see your changes,
           select the Refresh UI command from the Tools menu.
         </p>
         <p>
           To learn more about creating extensions, visit the 
-          <a href="http://wiki.songbirdnest.com/Developer/Developer_Intro/Extensions">Songbird Developer Site</a> and the
+          <a href="http://wiki.getnightingale.com/doku.php">Nightingale Developer Site</a> and the
           <a href="http://developer.mozilla.org/" >Mozilla Developer Center</a>.  
         </p>            
         <img src="chrome://sbdevtools/skin/extensions-icon.png" id="image"/>
