--- a/developertools/chrome/content/feathers-loaded.html
+++ b/developertools/chrome/content/feathers-loaded.html
@@ -27,7 +27,7 @@
         </p>
         <p>
           To learn more about creating feathers, visit the 
-          <a href="http://wiki.songbirdnest.com/Developer/Developer_Intro/Feathers">Songbird Developer Site</a>.  Feather on.
+          <a href="http://wiki.getnightingale.com/doku.php">Songbird Developer Site</a>.  Feather on.
         </p>            
         <img src="chrome://sbdevtools/skin/feathers-icon.png" id="image"/>
       </div>
